# jade-monolith

./: .gitignore  .gitmodules  .tmux.conf  CLAUDE.md  CONTRIBUTING.md  TASKS.md  pyproject.toml
.claude/: SWARM.md  settings.json
.claude/agents/: a11y-specialist.md  accessibility-reviewer.md  accessibility-tester.md  analytics-engineer.md  api-conformance-checker.md  api-designer.md  api-dev.md  api-doc-writer.md  api-researcher.md  api-tester.md  architect.md  architecture-doc-writer.md  auth-dev.md  backend-dev.md  benchmark-researcher.md  breaking-change-detector.md  bundle-optimizer.md  cache-strategist.md  capacity-planner.md  changelog-writer.md  ci-cd-specialist.md  cli-dev.md  cloud-architect.md  codebase-explorer.md  competitor-analyst.md  complexity-analyzer.md  compliance-checker.md  config-dev.md  conflict-resolver.md  container-specialist.md  context-manager.md  contract-tester.md  cpu-profiler.md  data-engineer.md  data-pipeline-dev.md  data-quality-engineer.md  (+69 more)
.github/: pull_request_template.md
contributing-docs/: REGISTRY.md  REPO-CHECKLIST.md  TRIAGE-DECISIONS.md
docs/: LOCAL_SETUP.md  api-usage.md  jadebot-v107-deploy.md  sources.md  team-setup.md
scripts/: create-issues-for-prs.sh  git-status-all.sh  health-check.sh  merge-releases.sh  pr-health.sh  setup-local.sh  start-team.sh  statusline.sh  swarm-launch.sh  swarm-status.sh  sync-branches.sh  update-submodules.sh
tests/: conftest.py  test_agent_schema.py  test_index_generator.py  test_parser.py  test_task_schema.py  test_team_contract.py  test_team_smoke.py  test_version_compat.py
(+55 files in other folders)
